Bug 197065. Do more complete invalidation on block size changes. r=jkeiser,sr=dbaron