layout/generic/nsHTMLContainerFrame.h
@@ -110,15 +110,17 @@ public:
 
   /**
    * Helper method to invalidate portions of a standard container frame if the
-   * reflow state indicates that they have changed (specifically border and
-   * padding).
+   * reflow state indicates that the size has changed (specifically border,
+   * background and outline).
+   * We assume that the difference between the old frame area and the new
+   * frame area is invalidated by some other means.
    * @param aPresContext the presentation context
    * @param aDesiredSize the new size of the frame
    * @param aReflowState the reflow that was just done on this frame
    */
-  void CheckInvalidateBorder(nsIPresContext*          aPresContext,
-                             nsHTMLReflowMetrics&     aDesiredSize,
-                             const nsHTMLReflowState& aReflowState);
+  void CheckInvalidateSizeChange(nsIPresContext*          aPresContext,
+                                 nsHTMLReflowMetrics&     aDesiredSize,
+                                 const nsHTMLReflowState& aReflowState);
 
 protected:
   virtual PRIntn GetSkipSides() const = 0;
